@@ -5,6 +5,8 @@ glibc (2.22-3) UNRELEASED; urgency=medium
       #817879.
   * debian/sysdeps/sh4.mk: build with -fno-delete-null-pointer-checks to
     workaround a missing SH4 specific __builtin_trap implementation in GCC.
+  * debian/patches/localedata/locale-C.diff: fix LC_TIME week and d_t_fmt
+    fields in C.UTF-8 locale.  Closes: #817895.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Mar 2016 22:29:17 +0100
 
